--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     </div>
   </nav>
   <div id="info" class="container-sm">
-    <h1 id="head">Portfolio</h1>
+    <h1 id="head">Portfolio: Robert Jacob Gassner</h1>
     <div class="row">
       <div class="col-lg">
         <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
