--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </div>
     </nav>
-    
+
     <div id="info" class="container-sm">
         <div class="row">
             <div class="col">
@@ -58,7 +58,7 @@
                     and spoken communication, presentation, and time management. He also functions well as an
                     individual, and is not afraid to get down and dirty with research and/or analysis.
                 </p>
-            
+
                 <p>In the coding world, R.J.'s focus is in web development, though he maintains interests in other areas
                     such as game development. As a musicologist, his research focused on the intersectons of music with
                     politics, diplomacy, and war. His masters thesis "A Topical and Narrative Analysis of Napoleonic Era
@@ -88,18 +88,24 @@
                 R.J. also enjoys outdoor activites, including camping, swimming, and simply exploring new places.
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <h1 id="resumeHead">Resume</h1>
+            <iframe src="Assets/CV.pdf" width="100%" height = "500px"></iframe>
+        </div>
+    </div>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-            crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
