one portfolio page functional

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,21 @@
     <h1 id="head">Portfolio: Robert Jacob Gassner</h1>
     <div class="row">
       <div class="col-lg">
-        <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
+        <h3>Hops & Hounds</h3>
+        <img class="img-fluid img-thumbnail" src="Assets/Images/hopnhound.png" alt="Screenshot of the Project">
+        <div>
+          <a href="https://razzlejazzled.github.io/Project1/">The Deployed Site</a>
+        </div>
+        <a href ="https://github.com/razzlejazzled/Project1">The Github Repo</a>
+        <div>
+
+        </div>
       </div>
       <div class="col-lg">
         <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
+        <div>
+          <a href="https://razzlejazzled.github.io/scheduler/">The deployed site</a>
+        </div>
       </div>
     </div>
     <div class="row">
