--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,13 @@
         </div>
       </div>
       <div class="col-lg">
-        <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
+        <h3>Password Creator</h3>
+        <img class="img-fluid img-thumbnail" src="Assets/Images/Password.png" alt="Screenshot of the Project">
         <div>
-          <a href="https://razzlejazzled.github.io/scheduler/">The deployed site</a>
+          <a href="https://razzlejazzled.github.io/Password-Creator/">The deployed site</a>
+        </div>
+        <div>
+          <a href="https://github.com/razzlejazzled/Password-Creator">The Github Repo</a>
         </div>
       </div>
     </div>
