--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,13 @@
   <div id="contact-info" class="container-sm">
     <h1>Or use the following information:</h1>
     <div class="row">
-    <h5 class="other-info">Profiles:</h5> </div>
+    <h5>Profiles:</h5> </div>
     <div><a href="https://github.com/razzlejazzled" class="other-info">Github</a> </div>
-    <div><a href="https://www.linkedin.com/in/r-j-gassner-371b241aa/">Linkedin</a>
+    <div><a href="https://www.linkedin.com/in/r-j-gassner-371b241aa/" class="other-info">Linkedin</a>
     </div>
     <div class="row">
       <h5>Other Contact Info</h5> </div>
-     <div><p>Phone: (541)-595-8738</p>
+     <div><p class="other-info">Phone: (541)-595-8738</p>
     </div>
   </div>
     
