added note taker

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,15 @@
     </div>
     <div class="row">
       <div class="col-lg">
-        <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
+        <h3>Note Taker</h3>
+        <iframe width="350" height = "350" src="https://youtu.be/qDDhIA4-jKY"></iframe>
+      <div>
+        <a href="https://young-oasis-46216.herokuapp.com/">The deployed site</a>
       </div>
+      <div>
+        <a href="https://github.com/razzlejazzled/Note-Taker">The Github Repo</a>
+      </div>
+    </div>
       <div class="col-lg">
         <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
       </div>
