--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,9 @@
     <div class="row">
       <div class="col-lg">
         <h3>Note Taker</h3>
-        <iframe width="350" height="350" src="https://www.youtube.com/embed/qDDhIA4-jKY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <img class="img-fluid img-thumbnail"
+        src ="/Assets/Images/notetaker.png"
+        alt="Screenshot of the Project">
       <div>
         <a href="https://young-oasis-46216.herokuapp.com/">The deployed site</a>
       </div>
