added employee management

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,9 +63,7 @@
     <div class="row">
       <div class="col-lg">
         <h3>Note Taker</h3>
-        <img class="img-fluid img-thumbnail"
-        src="Assets/Images/notetaker.png"
-        alt="Screenshot of the Project">
+        <img class="img-fluid img-thumbnail" src="Assets/Images/notetaker.png" alt="Screenshot of the Project">
       <div>
         <a href="https://young-oasis-46216.herokuapp.com/">The deployed site</a>
       </div>
@@ -74,7 +72,14 @@
       </div>
     </div>
       <div class="col-lg">
+        <h3>Employee Management System</h3>
         <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
+        <div>
+          <a href="https://www.youtube.com/watch?v=JcQz_pZHQiA&feature=youtu.be">Link to a video demoing the application</a>
+        </div>
+        <div>
+          <a href="https://github.com/razzlejazzled/employee-tracking">The Github Repo</a>
+        </div>
       </div>
     </div>
     <div class="row">
