--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <div>
           <a href="https://razzlejazzled.github.io/Project1/">The Deployed Site</a>
         </div>
-        <a href ="https://github.com/razzlejazzled/Project1">The Github Repo</a>
+        <a href="https://github.com/razzlejazzled/Project1">The Github Repo</a>
         <div>
 
         </div>
@@ -64,18 +64,19 @@
       <div class="col-lg">
         <h3>Note Taker</h3>
         <img class="img-fluid img-thumbnail" src="Assets/Images/notetaker.png" alt="Screenshot of the Project">
-      <div>
-        <a href="https://young-oasis-46216.herokuapp.com/">The deployed site</a>
+        <div>
+          <a href="https://young-oasis-46216.herokuapp.com/">The deployed site</a>
+        </div>
+        <div>
+          <a href="https://github.com/razzlejazzled/Note-Taker">The Github Repo</a>
+        </div>
       </div>
-      <div>
-        <a href="https://github.com/razzlejazzled/Note-Taker">The Github Repo</a>
-      </div>
-    </div>
       <div class="col-lg">
         <h3>Employee Management System</h3>
         <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
         <div>
-          <a href="https://www.youtube.com/watch?v=JcQz_pZHQiA&feature=youtu.be">Link to a video demoing the application</a>
+          <a href="https://www.youtube.com/watch?v=JcQz_pZHQiA&feature=youtu.be">Link to a video demoing the
+            application</a>
         </div>
         <div>
           <a href="https://github.com/razzlejazzled/employee-tracking">The Github Repo</a>
