--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
       </div>
       <div class="col-lg">
         <h3>Employee Management System</h3>
-        <img class="img-fluid img-thumbnail" src="http://placekitten.com/350/350" alt="placeholder image">
+        <img class="img-fluid img-thumbnail" src="Assets/Images/employeetracking.png" alt="screnshot of the code">
         <div>
           <a href="https://www.youtube.com/watch?v=JcQz_pZHQiA&feature=youtu.be">Link to a video demoing the
             application</a>
